Prevent campaign page button overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1811,6 +1811,7 @@ h5 {
   display: flex;
   gap: 15px;
   margin-bottom: 11px;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 1200px) {
